styles.css
/* Google Font */
@import url('https://fonts.googleapis.com/css2?family=Noto+Rashi+Hebrew:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
/* Google Font ENDS */

:root {
    --customBlue: #2A77DD;
    --customWhite: #FFFFF0;
    --customRed: #ED241F;
    --customDark: #212121;
  }

* {
    font-family: 'Roboto Mono', monospace;
    color: var(--customWhite);
}
html{
    background-color:var(--customDark)!important ;
}
p{
    font-weight: 200;
}
/* Scroll animation for background */
@keyframes scroll {
    to {
      background-position:0 600px;
    }
}
/* Scroll animation ENDS */

body{
    min-height: 100vh; 
    background: url(bg.jpg);
    background-size: 1500px 600px;
    animation: scroll 8s linear infinite;
    background-attachment: scroll;
}

/* Brand section */
@keyframes flip-with-rotate {
    0% {
        transform: perspective(400px) rotateY(0);
    }

    100% {
        transform: perspective(400px) rotateY(360deg);
    }
}
html{
    background-color:var(--customDark) !important ;

}
#logo{
    animation-name: flip-with-rotate;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    max-width:20%;
}

.brand-section{
    padding: 20px;
}

/* Form section */

.block-element{
    display: block;
}
.custom-button{
    border-radius: 20px;
    border: 2px solid var(--customWhite);
    background-color: var(--customBlue);
    transition: all 0.5s;
    padding:5px 20px;
}
input {
    border-radius: 20px;
    border: 2px solid var(--customWhite);
    background-color: transparent;
    transition: all 0.5s;
    padding:5px 20px;
  }
.custom-button:hover{
    background-color:var(--customRed);
    transition: all 0.5s;
}
.error-wrapper{
    padding-top: 10px;
}
#error-message{
    color: var(--customRed) !important;
    font-size: 0.9em !important ;
}
/* Hide word-data until the fetchFromEntry function is called */
#word-data{
    display: none;
}

